--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
 plugins {
   id 'com.android.application'
   id 'org.jetbrains.kotlin.android'
+  id 'kotlin-kapt'
   id 'kotlin-parcelize'
+  id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -33,6 +35,7 @@ android {
   }
   kotlinOptions {
     jvmTarget = '1.8'
+    freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
   }
   buildFeatures {
     viewBinding true
@@ -40,6 +43,8 @@ android {
 }
 
 dependencies {
+  implementation 'com.google.android.gms:play-services-maps:18.0.2'
+
   //desugaring
   coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
 
@@ -72,4 +77,10 @@ dependencies {
   implementation "androidx.camera:camera-camera2:${camerax_version}"
   implementation "androidx.camera:camera-lifecycle:${camerax_version}"
   implementation "androidx.camera:camera-view:${camerax_version}"
+
+  implementation 'androidx.room:room-ktx:2.5.0-alpha01'
+  kapt 'androidx.room:room-compiler:2.5.0-alpha01'
+  implementation 'androidx.room:room-paging:2.5.0-alpha01'
+
+  implementation "androidx.paging:paging-runtime-ktx:3.1.1"
 }
