--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
 
 dependencies {
   implementation 'com.google.android.gms:play-services-maps:18.0.2'
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
   //desugaring
   coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
