--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,6 @@ android {
 }
 
 dependencies {
-  implementation 'com.google.android.gms:play-services-maps:18.0.2'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
   //desugaring
@@ -51,9 +50,9 @@ dependencies {
 
   implementation 'androidx.core:core-ktx:1.7.0'
   implementation 'androidx.appcompat:appcompat:1.4.1'
-  implementation 'com.google.android.material:material:1.5.0'
   implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
   implementation "androidx.activity:activity-ktx:1.4.0"
+  implementation 'com.google.android.material:material:1.5.0'
 
   implementation 'androidx.annotation:annotation:1.3.0'
 
@@ -61,27 +60,41 @@ dependencies {
   implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
   implementation "androidx.datastore:datastore-preferences:1.0.0"
 
-  testImplementation 'junit:junit:4.13.2'
-
   implementation 'com.github.bumptech.glide:glide:4.13.1'
 
+  //testing
+  testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.1.3'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+  //special testing
+  testImplementation "androidx.arch.core:core-testing:2.1.0" // InstantTaskExecutorRule
+  testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2" //TestCoroutineDispatcher
+
+  //splashscreen API
   implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
 
+  //retrofit
   implementation 'com.squareup.retrofit2:retrofit:2.9.0'
   implementation "com.squareup.retrofit2:converter-gson:2.9.0"
   implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
+  //cameraX
   def camerax_version = "1.1.0-beta03"
   implementation "androidx.camera:camera-camera2:${camerax_version}"
   implementation "androidx.camera:camera-lifecycle:${camerax_version}"
   implementation "androidx.camera:camera-view:${camerax_version}"
 
+  //room & paging
   implementation 'androidx.room:room-ktx:2.5.0-alpha01'
   kapt 'androidx.room:room-compiler:2.5.0-alpha01'
   implementation 'androidx.room:room-paging:2.5.0-alpha01'
-
   implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+
+  //google maps
+  implementation 'com.google.android.gms:play-services-maps:18.0.2'
+
+  //mockito
+  testImplementation 'org.mockito:mockito-core:3.12.4'
+  testImplementation 'org.mockito:mockito-inline:3.12.4'
 }
