--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
       android:value="${MAPS_API_KEY}" />
 
     <activity
-      android:name=".MapsActivity"
+      android:name=".ui.activity.MapsActivity"
       android:exported="false"
       android:label="@string/title_activity_maps" />
     <activity
