--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
   defaultConfig {
     applicationId "com.dicoding.storyapp"
-    minSdk 21
+    minSdk 23
     targetSdk 32
     versionCode 1
     versionName "1.0"
@@ -40,6 +40,9 @@ android {
   buildFeatures {
     viewBinding true
   }
+  testOptions {
+    animationsDisabled = true
+  }
 }
 
 dependencies {
@@ -61,15 +64,24 @@ dependencies {
   implementation "androidx.datastore:datastore-preferences:1.0.0"
 
   implementation 'com.github.bumptech.glide:glide:4.13.1'
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
 
   //testing
   testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+  androidTestImplementation 'androidx.test:runner:1.4.0'
+  androidTestImplementation 'androidx.test:rules:1.4.0'
+  androidTestImplementation 'androidx.test:core-ktx:1.4.0'
+
+  //espresso
+  implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
 
   //special testing
   testImplementation "androidx.arch.core:core-testing:2.1.0" // InstantTaskExecutorRule
-  testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2" //TestCoroutineDispatcher
+  testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0" //TestCoroutineDispatcher
 
   //splashscreen API
   implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
@@ -97,4 +109,8 @@ dependencies {
   //mockito
   testImplementation 'org.mockito:mockito-core:3.12.4'
   testImplementation 'org.mockito:mockito-inline:3.12.4'
+
+  //mock web server
+  androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
+  androidTestImplementation "com.squareup.okhttp3:okhttp-tls:4.9.3"
 }
